# ch32-data

./: .gitignore  Cargo.toml  READMD.md  README.md  d  gen.sh
.github/workflows/: build.yml  nightly.yml
ch32-data-gen/: Cargo.toml
ch32-data-gen/src/: dma.rs  interrupts.rs  main.rs
ch32-data-macros/: Cargo.toml
ch32-data-serde/: Cargo.toml
ch32-data-serde/src/: lib.rs
ch32-metapac-gen/: Cargo.toml
ch32-metapac-gen/res/: Cargo.toml  build.rs
ch32-metapac-gen/src/: data.rs  lib.rs  main.rs
data/: BLE.csv  CH32V_CH32X_CH32L.csv  README.md  Special.csv
data/chips/: CH32L103C8T6.json  CH32L103C8T6.yaml  CH32L103F7P6.json  CH32L103F7P6.yaml  CH32L103F8P6.json  CH32L103F8P6.yaml  CH32L103F8U6.json  CH32L103F8U6.yaml  CH32L103G8R6.json  CH32L103G8R6.yaml  CH32L103K8U6.json  CH32L103K8U6.yaml  CH32M007G8R6.yaml  CH32V002x4x6.yaml  CH32V003A4M6.json  CH32V003A4M6.yaml  CH32V003F4P6.json  CH32V003F4P6.yaml  CH32V003F4U6.json  CH32V003F4U6.yaml  CH32V003J4M6.json  CH32V003J4M6.yaml  CH32V003x4x6.yaml  CH32V004x6x1.yaml  CH32V005x6x6.yaml  CH32V006x8x6.yaml  CH32V007x8x6.yaml  CH32V103C6T6.json  CH32V103C6T6.yaml  CH32V103C8T6.json  CH32V103C8T6.yaml  CH32V103C8U6.json  CH32V103C8U6.yaml  CH32V103R8T6.json  CH32V103R8T6.yaml  CH32V203C6T6.json  CH32V203C6T6.yaml  CH32V203C8T6.json  CH32V203C8T6.yaml  CH32V203C8U6.json  (+85 more)
data/dma/: CH32V0.yaml  CH32V103.yaml  CH32V_V4B.yaml  CH32V_V4C.yaml  CH32V_V4C_L1.yaml  CH32V_V4F.yaml  CH32V_V4F_DMA1.yaml  CH32V_V4F_DMA2.yaml  CH32X0.yaml  (+1 more)
src/: lib.rs
transforms/: ADC.yaml  EXTI.yaml  GPIO.yaml  PFIC.yaml  USBPD.yaml
(+158 files in other folders)
